2012-08-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTpt.cpp: getDatetime() now uses struct tm and mktime
	which dels correctly with offsets to UTC

2012-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTpt.cpp: Started module 'bdtPt' with posix time objects

2012-08-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTdu.cpp: New module 'bdtDu' for duration objects which
	can represents hours, minutes, seconds, down to milli, micro and
	nanoseconds (where the last part may be OS-dependent, see Boost docs)

2012-08-24  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppBDTtz.cpp: Use Language evaluation to get location of zone
	db file, reducing constructor to single argument for region; also
	store initial region and added DST start/end time accessors

	* R/zzz.R: add default display methods for bdtTz objects

2012-08-22  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppBDTtz.cpp: Rewrote bdtTz to be based on small class
	wrapping tz_db object plus one pointer both of which are initialized
	from the constructor

2012-08-20  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppBDTtz.cpp: New module 'bdtTz' for time zone functionality
	* R/zzz.R: Load bdtTzMod module on startup
	* inst/include/RcppBDT.h: Also include local_time.hpp header

	* inst/data/date_time_zonespec.csv: Time zone data from Boost sources

2012-08-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.1

	* R/bdt.R (getEndOfBizWeek,getEndOfMonth): Add call to fromDate() to
  	pass the argument to the bdt instance

2012-07-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.0

	* inst/NEWS.Rd, inst/NEWS: Added

2012-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: Updated for R 2.15.1 using loadModule() and evalqOnLoad()

	* src/RcppBDT.cpp (RCPP_MODULE): Expose the module class as 'bdtDate'
	* R/zzz.R: Updated accordingly
	* man/bdt.Rd: Updated accordingly

	* man/bdt.Rd: Added two required alias'es flagged by R CMD check
