@@ -21,6 +21,23 @@
 
 #include <RcppBDT.h>
 
+// define template specialisations for as and wrap
+namespace Rcpp {
+    template <> boost::posix_time::ptime as( SEXP dtsexp ) {
+        Rcpp::Datetime dt(dtsexp);
+        boost::posix_time::ptime pt(boost::gregorian::date(dt.getYear(), dt.getMonth(), dt.getDay()), 
+                                    boost::posix_time::time_duration(dt.getHours(), dt.getMinutes(), dt.getSeconds(), dt.getMicroSeconds()/1000.0));
+        return pt;
+    }
+
+    template <> SEXP wrap(const boost::posix_time::ptime &dt) {
+        boost::posix_time::ptime epoch(boost::gregorian::date(1970,1,1)); // TODO: cache this value...
+        boost::posix_time::time_duration x = dt - epoch; 	// this needs a UTC to local correction, but we get the fractional seconds
+        struct tm t = boost::posix_time::to_tm(dt);      	// this helps with UTC conversion
+        return Rcpp::wrap(Rcpp::Datetime( mktime(&t) + 1.0 * x.fractional_seconds() / x.ticks_per_second()));
+    }
+}
+
 class bdtPt {
 
 public:
@@ -37,21 +54,13 @@ public:
                                     
     void setFromTimeT(const time_t t)     { m_pt = boost::posix_time::from_time_t(t); }
 
+    void setFromDatetime(const SEXP dt)   { m_pt = Rcpp::as<boost::posix_time::ptime>(dt); }
+
+    Rcpp::Datetime getDatetime() 	  { return Rcpp::wrap(m_pt); }
+
     Rcpp::Date getDate() { 
         boost::gregorian::date::ymd_type ymd = m_pt.date().year_month_day();     // convert to date and then to y/m/d struct
         return Rcpp::Date( ymd.year, ymd.month, ymd.day );
-    }
-    // Rcpp::Datetime getDatetime() {
-    //     //std::cout << "At C++ level: " << m_pt << std::endl;
-    //     boost::posix_time::ptime epoch(boost::gregorian::date(1970,1,1));
-    //     boost::posix_time::time_duration x = m_pt - epoch; // needs a UTC to local correction
-    //     return Rcpp::Datetime( x.total_seconds() + 1.0 * x.fractional_seconds() / x.ticks_per_second() );// off by UTC difference
-    // }
-    Rcpp::Datetime getDatetime() {
-        boost::posix_time::ptime epoch(boost::gregorian::date(1970,1,1));
-        boost::posix_time::time_duration x = m_pt - epoch; // this needs a UTC to local correction, but we get the fractional seconds
-        struct tm t = boost::posix_time::to_tm(m_pt);      // this helps with UTC conversion
-        return Rcpp::Datetime( mktime(&t) + 1.0 * x.fractional_seconds() / x.ticks_per_second());
     }
 
 private:
@@ -72,7 +81,9 @@ RCPP_MODULE(bdtPtMod) {
 
         .method("setFromTimeT",                   &bdtPt::setFromTimeT,                   "set from POSIXTct")  
 
-        .method("getDate",                        &bdtPt::getDate,                        "get date representation")
+        .method("setFromDatetime",                &bdtPt::setFromDatetime,                "set from Datetime representation")
+
         .method("getDatetime",                    &bdtPt::getDatetime,                    "get datetime representation")
+        .method("getDate",                        &bdtPt::getDate,                        "get date representation")
     ;
 }
