@@ -2,10 +2,13 @@
 \title{News for Package \pkg{RcppBDT}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
-\section{Changes in version 0.x.y (2012-xx-yy)}{
+\section{Changes in version 0.2.2 (2012-09-01)}{
   \itemize{
-    \item New module providing time zone information such as offset to
+    \item New module 'bdtTz' providing time zone information such as offset to
     UTC, amount of DST, abbreviated and full timezone names.
+    \item New module 'bdtDu' using 'posix_time::duration' for time durations types
+    \item New module 'bdtPt' using 'posix_time::ptime' for posix time,
+    down to nanosecond granularity (where hardware and OS permit it)
   }
 }
 \section{Changes in version 0.2.1 (2012-08-08)}{
